argoCD/Day01/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: nginx-gateway
    app.kubernetes.io/name: nginx-gateway
    app.kubernetes.io/version: 2.6.7
  name: nginx-gateway
  namespace: nginx-gateway
spec:
  ports:
  - name: agent-grpc
    port: 443
    protocol: TCP
    targetPort: 8443
    nodePort: 31438    
  selector:
    app.kubernetes.io/instance: nginx-gateway
    app.kubernetes.io/name: nginx-gateway
  type: NodePort



# apiVersion: v1
# kind: Service
# metadata:
#   name: nginx-gateway
#   namespace: nginx-gateway
#   labels:
#     app.kubernetes.io/name: nginx-gateway
#     app.kubernetes.io/instance: nginx-gateway
#     app.kubernetes.io/version: "1.5.0"
# spec:
#   type: NodePort
#   selector:
#     app.kubernetes.io/name: nginx-gateway
#     app.kubernetes.io/instance: nginx-gateway
#   ports:
#     - name: http
#       port: 80
#       protocol: TCP
#       targetPort: 80
#       nodePort: 31437
#     - name: https
#       port: 443
#       protocol: TCP
#       targetPort: 443
#       nodePort: 31438
