argoCD/Day01/http_route_app1_app2.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: app1-app2-route
spec:
  parentRefs:
  - name: gateway
    namespace: gateway-ns
    sectionName: http
  hostnames:
    - "app.example.com" 
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/app1"
      backendRefs:
        - name: app1-service
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: "/app2"
      backendRefs:
        - name: app2-service
          port: 80

---

apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: app1-app2-route-https
spec:
  parentRefs:
  - name: gateway
    namespace: gateway-ns
    sectionName: https
  hostnames:
    - "apps.example.com" 
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/app1"
      backendRefs:
        - name: app1-service
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: "/app2"
      backendRefs:
        - name: app2-service
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: argocd-server
          port: 443          

---

apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: argocd-route-https
spec:
  parentRefs:
  - name: gateway
    namespace: gateway-ns
    sectionName: https
  hostnames:
    - "argocd.example.com" 
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: argocd-server
          port: 443
